@@ -1,9 +1,10 @@
 ## PLUXML X.X (sortie : jj/mm/aaaa) ##
 
 [+] Amélioration des performances du gestionnaire de médias (bazooka07)
-[+] #40 Ne pas afficher le meta du site en mode article, static, categorie
+[+] #40 Ne pas afficher le meta du site en mode article, static, categorie (Stéphane)
 [+] #135 Contextualiser le lien du flux RSS dans le <head> en fonction du mode catégorie, tag, ou autre (bazooka07, P3ter)
 [+] #207 Afficher/masquer le chapeau et les tags d'un article dans l'administration en CSS3 au lieu d'utiliser du JS (bazooka07, Stéphane, P3ter)
+[+] #215 Mise en avant du lien de l'article en cours de modification dans l'administration (sudwebdesign, P3ter)
 [+] #216 Refacto de la fonction plxUtils::printArea() (bazooka07)
 [+] #305 Remplacement dirname(__FILE__) par __DIR__ dans l'admin et le thème par défaut (P3ter)
 [+] #309 Remplacement de define() par const (bazooka07)
